syntax = "proto3";
package tezedge;

// Imports
// ...

service Tezedge {
    rpc GetBlock (GetBlockRequest) returns (GetBlockReply);

    rpc MonitorCommitHash (MonitorCommitHashRequest) returns (MonitorCommitHashReply);

    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello (HelloRequest) returns (HelloReply);
}


message MonitorCommitHashRequest {}
 
message MonitorCommitHashReply {
    string commit_hash = 1;
}

message GetBlockRequest {
    string chain_id = 1;
    string block_id = 2;
 }

message GetBlockReply {
    // A block identifier (Base58Check-encoded)
    string block_hash = 1;
    string chain_id = 2;
 }


message HelloRequest {
    string name = 1;
}
 
message HelloReply {
    string message = 1;
}